# Xmas.JS

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  history.js
bundler/: Cargo.toml
bundler/src/: lib.rs
core/: Cargo.toml
core/src/: class.rs  lib.rs  loader.rs  persistent.rs  result.rs  runtime.rs  safe_ref.rs  util.rs  value.rs
core/src/allocator/: rust.rs
core/src/context/: async.rs  ctx.rs  owner.rs
core/src/context/async/: future.rs
core/src/loader/: builtin_loader.rs  builtin_resolver.rs  bundle.rs  script_loader.rs  util.rs
core/src/runtime/: async.rs  base.rs  opaque.rs  raw.rs  spawner.rs  task_queue.rs
core/src/value/: array.rs  array_buffer.rs  bigint.rs  convert.rs  exception.rs  function.rs  iterable.rs  module.rs  object.rs  string.rs  symbol.rs  typed_array.rs
core/src/value/function/: args.rs  ffi.rs  params.rs  types.rs
core/src/value/object/: property.rs
core/src/value/proxy/: handler.rs
example/: package.json  try.js  try.ts
examples/module-loader/: Cargo.toml
examples/native-module/: Cargo.toml
examples/rquickjs-cli/: Cargo.toml
examples/rquickjs-cli/src/: main.rs
macro/: Cargo.toml
modules/: Cargo.toml
modules/src/: async_hooks.rs  console.rs  exceptions.rs  fs.rs  hooking.rs  lib.rs  navigator.rs  parser.rs  path.rs  permissions.rs  script.rs  serdeserclone.rs  source.rs  timers.rs
modules/src/abort/: abort_controller.rs  abort_signal.rs  mod.rs
modules/src/buffer/: array_buffer_view.rs  blob.rs  buffer.rs  file.rs  mod.rs
modules/src/crypto/: crc32.rs  md5_hash.rs  mod.rs  sha_hash.rs
modules/src/crypto/subtle/: crypto_key.rs  derive.rs  derive_algorithm.rs  digest.rs  encryption.rs  encryption_algorithm.rs  export_key.rs  generate_key.rs  import_key.rs  key_algorithm.rs  mod.rs  sign.rs  sign_algorithm.rs  verify.rs  wrapping.rs
modules/src/dns/: lookup.rs  mod.rs
modules/src/event/: custom_event.rs  event.rs  event_target.rs  mod.rs
modules/src/fetch/: body.rs  fetch.rs  form_data.rs  headers.rs  incoming.rs  mod.rs  request.rs  response.rs  security.rs
modules/src/fs/: access.rs  chmod.rs  file_handle.rs  mkdir.rs  mod.rs  open.rs  read_dir.rs  read_file.rs  rename.rs  rm.rs  stats.rs  symlink.rs  write_file.rs
modules/src/http/: agent.rs  client.rs  dns_cache.rs  mod.rs
modules/src/intl/: cldr_data.rs  date_time_format.rs  mod.rs  pattern_formatter.rs
modules/src/module/: mod.rs  module_builder.rs
modules/src/module/module/: loader.rs  mod.rs  require.rs  resolver.rs
modules/src/module/package/: loader.rs  resolver.rs
modules/src/text/: mod.rs  text_decoder.rs  text_encoder.rs
modules/src/tls/: config.rs  mod.rs  no_verification.rs
modules/src/url/: mod.rs  url_class.rs  url_search_params.rs
modules/src/utils/: any_of.rs  bytes.rs  class.rs  compression.rs  console.rs  ctx.rs  encoding.rs  error.rs  fs.rs  hash.rs  io.rs  mc_oneshot.rs  mod.rs  module.rs  numbers.rs  object.rs  options.rs  primordials.rs  provider.rs  result.rs  test.rs  time.rs
modules/src/utils/json/: escape.rs  mod.rs  parse.rs  stringify.rs
package-manager/: Cargo.toml
package-manager/src/: cli.rs  config.rs  lib.rs  npm.rs  plan.rs  progress.rs  resolve.rs  util.rs
package-manager/src/commands/: add.rs  clean.rs  create.rs  exec.rs  install.rs  mod.rs  remove.rs  run.rs  update.rs  upgrade.rs  why.rs
repl/: Cargo.toml  history.js
repl/src/: lib.rs  main.rs
rsquickjs/: Cargo.toml
rsquickjs/core/: Cargo.toml
rsquickjs/core/src/: allocator.rs  class.rs  context.rs  js_lifetime.rs  lib.rs  loader.rs  markers.rs  persistent.rs  result.rs  runtime.rs  safe_ref.rs  value.rs
rsquickjs/core/src/class/: ffi.rs  trace.rs
rsquickjs/core/src/context/: async.rs  builder.rs  ctx.rs  owner.rs
rsquickjs/core/src/context/async/: future.rs
rsquickjs/core/src/loader/: builtin_loader.rs  builtin_resolver.rs  bundle.rs  compile.rs  file_resolver.rs  module_loader.rs  native_loader.rs  script_loader.rs  util.rs
rsquickjs/core/src/runtime/: async.rs  opaque.rs  raw.rs  spawner.rs  userdata.rs
rsquickjs/core/src/value/: array.rs  array_buffer.rs  atom.rs  bigint.rs  exception.rs  function.rs  iterable.rs  module.rs  object.rs  promise.rs  proxy.rs  string.rs  symbol.rs  typed_array.rs
rsquickjs/core/src/value/atom/: predefined.rs
rsquickjs/core/src/value/convert/: from.rs  into.rs
rsquickjs/core/src/value/function/: into_func.rs  params.rs  types.rs
rsquickjs/core/src/value/object/: property.rs
rsquickjs/examples/module-loader/src/: main.rs
rsquickjs/macro/: Cargo.toml  README.md
rsquickjs/macro/src/: common.rs  embed.rs  function.rs  lib.rs
rsquickjs/macro/src/module/: declare.rs  evaluate.rs
rsquickjs/src/: lib.rs
rsquickjs/tests/: compile.rs
src/: lib.rs  main.rs
tests/: compile.rs
vsys/: Cargo.toml
vsys/src/: error.rs  fs.rs  lib.rs  module_loader.rs  permissions.rs
