[package]
name = "xmas"
version = "0.10.0"
authors = ["LemonHX <lemonhx@lemonhx.moe>"]
edition = "2021"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
description = "WinterTC compatible ECMAScript/TypeScript runtime"


[workspace]
members = [
  "rsquickjs/core",
  "rsquickjs/macro",
  "rsquickjs",

  # xmas-js
  "package-manager",
  "modules",
  "repl",
]

[workspace.dependencies]
# TODO: modify quickjs and rsquickjs-sys later
rquickjs-sys = { version = "0.10.0", git = "https://github.com/DelSkayn/rquickjs", rev = "111951b1a31075bdff46684e0ff29f37ff2a04b2" }
rsquickjs-core = { version = "0.10.0", path = "rsquickjs/core" }
rsquickjs-macro = { version = "0.10.0", path = "rsquickjs/macro" }
rsquickjs = { version = "0.10.0", path = "rsquickjs" }

xmas-js-modules = { path = "modules" }
xmas-package-manager = { path = "package-manager" }

[dependencies]
xmas-js-modules = { workspace = true }
xmas-js-repl = { path = "repl" }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0.100"

[features]
default = []
