[package]
name = "xmas"
version = "0.10.0"
authors = ["LemonHX <lemonhx@lemonhx.moe>"]
edition = "2021"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
description = "WinterTC compatible ECMAScript/TypeScript runtime"


[workspace]
members = [
  "rsquickjs/core",
  "rsquickjs/macro",
  "rsquickjs",

  # xmas-js
  "package-manager",
  "bundler",
  "modules",
  "vsys",
  "repl",
]

[workspace.dependencies]
# TODO: modify quickjs and rsquickjs-sys later
rquickjs-sys = { version = "0.10.0", git = "https://github.com/DelSkayn/rquickjs", rev = "111951b1a31075bdff46684e0ff29f37ff2a04b2" }
rsquickjs-core = { version = "0.10.0", path = "rsquickjs/core" }
rsquickjs-macro = { version = "0.10.0", path = "rsquickjs/macro" }
rsquickjs = { version = "0.10.0", path = "rsquickjs" }

xmas-js-modules = { path = "modules" }
xmas-package-manager = { path = "package-manager" }
xmas-vsys = { path = "vsys" }
xmas-bundler = { path = "bundler" }

[dependencies]
xmas-js-modules = { workspace = true }
xmas-js-repl = { path = "repl" }
xmas-package-manager = { workspace = true }
xmas-bundler = { workspace = true }
xmas-vsys = { workspace = true }
rsquickjs = { workspace = true }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
colored = "3"
compact_str = { version = "0.9.0", features = ["serde"] }
node-semver = { git = "https://github.com/danielhuang/node-semver-rs", rev = "bf4b103dc88b310c9dc049433aff1a14716e1e68" }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []
