[package]
name = "xmas-js-modules"
version = "0.1.0"
authors = ["LemonHX <lemonhx@lemonhx.moe>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Winter TC JavaScript modules for quickjs"
keywords = ["quickjs", "ecmascript", "javascript", "es6", "es2020"]

[dependencies]
rsquickjs = { workspace = true, features = ["macro", "either", "phf"] }
tracing = "0.1.44"
itoa = "1.0.15"
ryu = "1.0.20"
simd-json = "0.17.0"
rand = "0.9.2"
tokio = { version = "1", features = ["full"], optional = true }

oxc = { version = "0.104.0", optional = true, features = [
    "transformer",
    "codegen",
    "semantic",
] }
itertools = "0.14.0"
either = "1.15.0"
ring = "0.17.14"
memchr = "2.7.6"
phf = "0.13.1"
hex-simd = "0.8.0"
base64-simd = "0.8.0"
uuid = { version = "1.19.0", features = ["v4", "v7"] }
junction = { version = "1.3.0", optional = true }
home = "0.5.12"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.17"

[features]
default = ["event", "console", "source", "fs"]

event = []
console = []
source = ["oxc"]
fs = ["tokio", "junction"]
