[package]
name = "xmas-js-modules"
version = "0.1.0"
authors = ["LemonHX <lemonhx@lemonhx.moe>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Winter TC JavaScript modules for quickjs"
keywords = ["quickjs", "ecmascript", "javascript", "es6", "es2020"]

[dependencies]
rsquickjs = { workspace = true, features = ["macro", "either", "phf"] }
tracing = "0.1.44"
itoa = "1.0.15"
ryu = "1.0.20"
simd-json = "0.17.0"
rand = "0.9.2"
tokio = { version = "1", features = ["full"], optional = true }

# source
oxc = { version = "0.104.0", optional = true, features = [
    "transformer",
    "codegen",
    "semantic",
] }
itertools = "0.14.0"
either = "1.15.0"
ring = "0.17.14"
memchr = "2.7.6"
phf = "0.13.1"

hex-simd = "0.8.0"
base64-simd = "0.8.0"
uuid = { version = "1.19.0", features = ["v4", "v7"] }

# fs
junction = { version = "1.3.0", optional = true }
home = "0.5.12"


# tls
rustls = { version = "0.23", features = [
    "std",
    "ring",
    "tls12",
], default-features = false, optional = true }
webpki-roots = { version = "1", default-features = false, optional = true }

# http
tower-service = { version = "0.3", default-features = false, optional = true }
quick_cache = { version = "0.6", default-features = false, optional = true }
bytes = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1.8.1", features = ["full"], optional = true }
hyper-util = { version = "0.1", optional = true }
hyper-rustls = { version = "0.27", features = [
    "ring",
    "http2",
], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.22"

[features]
default = ["event", "console", "source", "fs", "tls", "dns", "http"]

event = []
console = []
source = ["oxc"]
fs = ["tokio", "junction"]
tls = ["webpki-roots", "rustls", "tokio"]
dns = ["tokio"]
http = [
    "tls",
    "dns",
    "tokio",
    "bytes",
    "http-body-util",
    "hyper",
    "hyper-util",
    "hyper-rustls",
    "tower-service",
    "quick_cache",
]
