[package]
name = "xmas-js-modules"
version = "0.1.0"
authors = ["LemonHX <lemonhx@lemonhx.moe>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Winter TC JavaScript modules for quickjs"
keywords = ["quickjs", "ecmascript", "javascript", "es6", "es2020"]

[dependencies]
rsquickjs = { workspace = true, features = ["macro", "either", "phf"] }
xmas-vsys = { path = "../vsys" }
tracing = "0.1.44"
itoa = "1.0.15"
ryu = "1.0.20"
simd-json = "0.17.0"
rand_core = { version = "=0.10.0-rc-2" }
rand = { version = "0.10.0-rc.2", features = [
    "std",
    "std_rng",
    "thread_rng",
], default-features = false }
tokio = { version = "1", features = ["full"], optional = true }

# intl
chrono = { version = "0.4", features = [
    "std",
    "clock",
], default-features = false, optional = true }
chrono-tz = { version = "0.10", default-features = false, optional = true }
iana-time-zone = { version = "0.1", optional = true }

# source
oxc = { version = "^0.103.0", optional = true, features = [
    "transformer",
    "codegen",
    "semantic",
] }
oxc_resolver = "=11.16.2"
thiserror = "*"
itertools = "0.14.0"
either = "1.15.0"
ring = "0.17.14"
memchr = "2.7.6"
phf = "0.13.1"

hex-simd = "0.8.0"
base64-simd = "0.8.0"
uuid = { version = "1.19.0", features = ["v4", "v7"] }

# fs
junction = { version = "1.3.0", optional = true }
home = "0.5.12"


# tls
rustls = { version = "0.23", features = [
    "std",
    "ring",
    "tls12",
], default-features = false, optional = true }
webpki-roots = { version = "1", default-features = false, optional = true }

# http
tower-service = { version = "0.3", default-features = false, optional = true }
quick_cache = { version = "0.6", default-features = false, optional = true }
bytes = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1.8.1", features = ["full"], optional = true }
hyper-util = { version = "0.1", optional = true }
hyper-rustls = { version = "0.27", features = [
    "ring",
    "http2",
], optional = true }
pin-project-lite = "0.2.16"
percent-encoding = { version = "2.3.2", optional = true }
url = "2.5.7"

brotli = { version = "8", features = ["std"], default-features = false }
flate2 = { version = "1", features = ["miniz_oxide"], default-features = false }
zstd = { version = "0.13", default-features = false }


# crypto
crc32c = { version = "0.6", default-features = false }
crc32fast = { version = "1", default-features = false }
aes = { version = "0.9.0-rc.2" }
aes-gcm = { version = "0.11.0-rc.2", features = [
    "alloc",
], default-features = false }
aes-kw = { version = "0.3.0-rc.1", features = [
    "oid",
], default-features = false }
cbc = { version = "0.2.0-rc.2", features = ["alloc"] }
const-oid = { version = "0.10", features = ["db"], default-features = false }
ctr = { version = "0.10.0-rc.2", default-features = false }
der = { version = "0.8.0-rc.10", features = [
    "derive",
    "alloc",
], default-features = false }
ecdsa = { version = "0.17.0-rc.9", default-features = false }
elliptic-curve = { version = "0.14.0-rc.17", features = [
    "alloc",
], default-features = false }
md-5 = { version = "0.11.0-rc.3", default-features = false }
rsa = { version = "0.10.0-rc.10", features = [
    "std",
    "sha2",
    "encoding",
    "os_rng",
], default-features = false }
p256 = { version = "0.14.0-rc.1", features = [
    "ecdh",
    "ecdsa",
    "pkcs8",
], default-features = false }
p384 = { version = "0.14.0-rc.1", features = [
    "ecdh",
    "ecdsa",
    "pkcs8",
], default-features = false }
p521 = { version = "0.14.0-rc.1", features = [
    "ecdh",
    "ecdsa",
    "pkcs8",
], default-features = false }
pkcs8 = { version = "0.11.0-rc.8", default-features = false, features = [
    "alloc",
] }
spki = { version = "0.8.0-rc.4", features = [
    "alloc",
], default-features = false }
x25519-dalek = { version = "3.0.0-pre.3", features = [
    "static_secrets",
    "zeroize",
], default-features = false }


[features]
default = [
    "event",
    "abort",
    "console",
    "source",
    "fs",
    "tls",
    "dns",
    "http",
    "url",
    "fetch",
    "intl",
    "crypto",
]

crypto = []
event = []
abort = ["event"]
console = []
source = ["oxc"]
fs = ["tokio", "junction"]
tls = ["webpki-roots", "rustls", "tokio"]
dns = ["tokio"]
http = [
    "tls",
    "dns",
    "tokio",
    "bytes",
    "http-body-util",
    "hyper",
    "hyper-util",
    "hyper-rustls",
    "tower-service",
    "quick_cache",
]
url = []
fetch = ["http", "percent-encoding", "url"]
intl = ["chrono", "chrono-tz", "iana-time-zone"]


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.22"
wiremock = "0.6.5"
