[package]
name = "xmas-package-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"

tokio = { version = "1.37.0", features = ["full"] }
tokio-tar = { version = "*" }
tokio-util = { version = "0.7.10", features = ["compat"] }

itertools = "0.14.0"


async-compression = { version = "0.4.9", features = ["tokio", "gzip"] }
async-recursion = "1.1.1"
cached = { version = "0.56.0", features = ["async"] }

clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
compact_str = { version = "0.9.0", features = ["serde"] }
dashmap = { version = "6.0.0", features = ["serde"] }
async-channel = "2.5.0"
futures = "0.3.31"
indexmap = { version = "2.2.6", features = ["serde"] }
indicatif = "0.18.0"
multimap = "0.10.0"
node-semver = { git = "https://github.com/danielhuang/node-semver-rs", rev = "bf4b103dc88b310c9dc049433aff1a14716e1e68" }
notify = "=8.2.0"
reqwest = { version = "0.12.4", features = [
    "json",
    "stream",
    "rustls-tls",
    "trust-dns",
    "brotli",
    "gzip",
    "deflate",
    "http2",
], default-features = false }

rustc-hash = "2.0.0"

serde = { version = "1.0.200", features = ["derive", "rc"] }
serde_json = { version = "1.0.116", features = ["preserve_order"] }
serde_path_to_error = "0.1.16"


toml = "0.9.0"
tap = "1.0.1"
url = { version = "2.5.0", features = ["serde"] }
rand = "0.10.0-rc"
which = "8.0.0"
deno_task_shell = "0.26.1"
owo-colors = "4.2.3"
junction = "1.3.0"
exec = "0.3.1"
