[package]
name = "xmas-js-repl"
version = "0.1.0"
authors = ["LemonHX <lemonhx@lemonhx.moe>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Winter TC JavaScript modules for quickjs"
keywords = ["quickjs", "ecmascript", "javascript", "es6", "es2020"]

[dependencies]
rquickjs = { workspace = true, features = ["macro"]}
xmas-js-modules = { workspace = true }
tracing-subscriber = "0.3.17"
tracing = "0.1.44"
rustyline = "17.0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.100"
# itoa = "1.0.15"
# ryu = "1.0.20"
# simd-json = "0.17.0"
# rand = "0.9.2"

