[package]
name = "module-loader"
version = "0.10.0"
authors = ["K. <kayo@illumium.org>"]
edition = "2018"
publish = false

[dependencies.rquickjs]
path = "../.."
default-features = false
features = ["futures"]

[features]
default = ["macro"]
macro = ["rquickjs/macro"]

[dependencies]
tokio = { version = "1", default-features = false, features = ["full"] }