[package]
name = "rsquickjs-macro"
version = "0.10.0"
authors = ["LemonHX <lemonhx@lemonhx.moe>", "Mees Delzenne <mees.delzenne@gmail.com>", "K. <kayo@illumium.org>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Procedural macros for rsquickjs"
keywords = ["quickjs", "ecmascript", "javascript", "es6", "es2020"]
categories = ["api-bindings"]

[lib]
proc-macro = true

[dependencies]
rsquickjs-core = { workspace = true }
proc-macro2 = "1"
proc-macro-crate = "3"
quote = "1"
ident_case = "1"
fnv = "1"
indexmap = "2"
convert_case = "0.10"
syn = { version = "2", features = ["full", "fold", "extra-traits", "visit"] }
phf_shared = { version = "0.13", optional = true }
phf_generator = { version = "0.13", optional = true }

[dev-dependencies]
rsquickjs = { path = "../", features = ["macro", "phf"] }
difference = "2"


[features]
phf = ["phf_shared", "phf_generator"]
bindgen = ["rsquickjs-core/bindgen"]
